--- a/js_app/package.json
+++ b/js_app/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
+    "mkcert": "^3.2.0",
     "socket.io": "^4.8.1"
   },
-  "devDependencies": {},
   "description": ""
 }
